prompt 수정, 출력결과 수정

--- a/chat/templates/Chatfile.html
+++ b/chat/templates/Chatfile.html
@@ -16,7 +16,7 @@
     </div>
     <div class="contact-info">
         <div class="avatar">
-            <img src="GPT.png" alt="Avatar">
+            <img src="https://i.ibb.co/zSnd2fy/GPT.png" alt="Avatar">
         </div>
         <div class="user-info">
             KoChat
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="input-area">
-        <input type="text" name="" id="input">
+        <input type="text" name="" id="input" placeholder="입력하세요">
         <button><i class="fas fa-paper-plane" id="send"></i></button>
     </div>
 </div>
